# Multi-Agent-RAG-System-for-Local-PDFs

./: .gitignore  README.md  requirements.txt
askpdfcrew/: .gitignore  pdf_answer.md  pyproject.toml
askpdfcrew/src/askpdfcrew/: crew.py  main.py
askpdfcrew/src/askpdfcrew/config/: agents.yaml  tasks.yaml
